# bs_codex

./: .gitignore  README.md  pyproject.toml
MY_IDEA/: 毕设题目、理解和设定.txt  阶段一4.6.txt  阶段一4.9.txt  阶段一4.9晚解码逻辑修改.txt  阶段二4.6（已弃用）.txt
apps/: __init__.py  build_stage1_scenario_template.py  build_stage1_template_from_preprocess.py  main.py  preprocess_stage1.py  preprocess_stk_access.py  run_scenario_pipeline.py  run_stage1_single_validation.py  run_stage1_taskset_workbook.py  run_stage1_workbook_batch.py  run_stage2_taskset_sheet.py  run_stage2_workbook_sheet.py
bs3/: __init__.py  distance_enrichment.py  hotspot_builder.py  models.py  pipeline.py  regular_routing_common.py  scenario.py  stage1.py  stage1_candidate_pool.py  stage1_screening.py  stage1_static_value.py  stage1_template_builder.py  stage1_visualization.py  stage2.py  stage2_baseline_insert.py  stage2_emergency_scheduler.py  stage2_hotspot_relief.py  stage2_hotspot_relief_closed_loop.py  stage2_regular_block_repair.py  stage2_regular_greedy_baseline.py  stage2_regular_joint_milp.py  stage2_result_plotting.py  stage2_two_phase_scheduler.py  stk_access_preprocess.py  stk_stage1_bridge.py  stk_stage1_preprocess.py
docs/: ALIGNMENT_CHECK_4_6.md  CURRENT_PARAMETER_TABLE.md  PARAMETER_REFERENCE.md  PARAMETER_SETTINGS.md  PROJECT_FILE_GUIDE.md  STAGE1_PARAMETER_BASELINE.md
examples/: sample_scenario.json
tests/: test_stage1_current_logic.py  test_stage2_baseline_insert.py  test_stage2_emergency_validation.py  test_stage2_hotspot_relief.py  test_stage2_priority_insert.py  test_stage_refactor_smoke.py  (+2 more)
(+145 files in other folders)
